《深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）》-读书笔记(3), 7.6　本章小结